--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bracket-lib = "~0.8"
-specs = "~0.18"
+bracket-lib = { version = "0.8", features = ["serde"] }
+specs = { version = "0.17", features = ["serde"] }
 specs-derive = "~0.4"
+serde = { version = "^1.0.44", features = ["derive"] }
+serde_json = "~1.0"
