--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ specs = { version = "0.17", features = ["serde"] }
 specs-derive = "~0.4"
 serde = { version = "^1.0.44", features = ["derive"] }
 serde_json = "~1.0"
+lazy_static = "1.4.0"
