--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ specs-derive = "~0.4"
 serde = { version = "^1.0.44", features = ["derive"] }
 serde_json = "~1.0"
 lazy_static = "1.4.0"
+regex = "1.5.5"
